--- a/1PTBgr2MS/index.html
+++ b/1PTBgr2MS/index.html
@@ -280,11 +280,11 @@ text-align:center;
 	</div> 
 	
 	<div id="footer">
-	kontakt:
+	KONTAKT:
 	<p>Tel: +48 22 482 01 99
-	<br>travel@staypoland.com
+	<br>take!avacation@gmail.com
 	<p><a href="https://triverna.pl/blog/gdzie-warto-pojechac/" target="blank">1. źródło tekstu </a>|<a href="https://zyciewpodrozy.pl/gdzie-wyjechac-na-wakacje/" target="blank">2. źródło tekstu </a>
-	<p><a href="https://malgos208.github.io/projects/1PTBgr2Malgorzata_Stypa/index.html " target="blank">link do strony na github</a>
+	<p><a href="https://malgos208.github.io/projects/1PTBgr2MS/index.html" target="blank">link do strony na github</a>
 	
 	
 		
