--- a/forms/podstrony/greetings.html
+++ b/forms/podstrony/greetings.html
@@ -75,7 +75,7 @@ body{
         
         <div class="h-header-top">
             <!-- navbar -->
-            <a href="index.html" class="c-logo"><span class="c-logo__span">let's!</span><span class="neon">DRAW</span></a>
+            <a href="../index.html" class="c-logo"><span class="c-logo__span">let's!</span><span class="neon">DRAW</span></a>
 
             <!-- hamburger -->
 			<div class="menu-btn">
