--- a/forms/podstrony/kurs.html
+++ b/forms/podstrony/kurs.html
@@ -64,7 +64,7 @@
         
         <div class="h-header-top">
             <!-- navbar -->
-            <a href="index.html" class="c-logo"><span class="c-logo__span">let's!</span><span class="neon">DRAW</span></a>
+            <a href="../index.html" class="c-logo"><span class="c-logo__span">let's!</span><span class="neon">DRAW</span></a>
 
             <!-- hamburger -->
 			<div class="menu-btn">
