--- a/forms/podstrony/zapis.html
+++ b/forms/podstrony/zapis.html
@@ -84,7 +84,7 @@ $("input, select, textarea, form, button").css("box-shadow", "none");
         
         <div class="h-header-top">
             <!-- navbar -->
-            <a href="index.html" class="c-logo"><span class="c-logo__span">let's!</span><span class="neon">DRAW</span></a>
+            <a href="../index.html" class="c-logo"><span class="c-logo__span">let's!</span><span class="neon">DRAW</span></a>
 
             <!-- hamburger -->
 			<div class="menu-btn">
