--- a/forms/index.html
+++ b/forms/index.html
@@ -97,7 +97,7 @@
 				
 				
 				<p>Oferujemy kursy zarówno online jak i na zajęciach w pracowni. Kursy prowadzone są przez wykwalifikowanych nauczycieli, którzy mają duże doświadczenie w swojej dziedzinie. Nasze kursy obejmują <h2 style="text-align: center; font-size: 1.2em">malarstwo tradycyjne, ale także digital painting</h2> Każdy kurs odbywa się w wymiarze 48 godzin (16 zajęć po 3 godziny). Oferujemy różnorodne możliwości. Poziom kursu jest do uzgodnienia, toteż nie ma znaczenia, czy dopiero zaczynasz przygodę ze sztuką, czy chcesz rozwinąć już posiadane umiejętności. <img class="imgleft" src="img/photo1.jpg">
-				<p>Wszystkie kursy są odpowiednie zarówno dla hobbystów, kandydatów na kierunki studiów związane z grafiką i malarstwem, a także osób pragnących pracować w przyszłości jako profesjonalni ilustratorzy i concept artyści. Zajęcia prowadzone są z podziałem na różne kategorie wiekowe. Zapraszamy wszsytkich od 10 roku życia!
+				<p>Wszystkie kursy są odpowiednie zarówno dla hobbystów, kandydatów na kierunki studiów związane z grafiką i malarstwem, a także osób pragnących pracować w przyszłości jako profesjonalni ilustratorzy i concept artyści. Zajęcia prowadzone są z podziałem na różne kategorie wiekowe. Zapraszamy wszystkich od 10 roku życia!
 				<br><p><b>Jak wygląda kurs online?</b>
 				<p>Spotykasz się z prowadzącym online 1 na 1 lub w grupie. Prowadzicie rozmowę za pomocą Google Hangouts. Zarówno Ty jak i mentor widzicie równocześnie podgląd swojego ekranu.
 				<p>Pojedyncze zajęcia z mentorem trwają 3 godziny zegarowe. W tym czasie możesz obserwować mentora podczas pracy, a on Ciebie dając Ci w tym czasie cenne wskazówki. Mentor może również robić na żywo korektę Twoich prac.
