--- a/english/podstrony/czasy.html
+++ b/english/podstrony/czasy.html
@@ -135,7 +135,7 @@ text-align: center;
 	<div class="websectiontitle" data-scroll>Present Simple</div>
 
 <p>Czasu tego używamy, kiedy opisujemy rutynę.
-<div class="struktura"><p>The trains leaves at seven o'clock.</div>
+<div class="struktura"><p>The train leaves at seven o'clock.</div>
 <p><img src="../img/train.gif" style="width: 70%; position:relative; left: 50%; transform: translateX(-50%)"></img>
 
 		<div class="websectiontitle" data-scroll>Present Continuous</div>
