--- a/oliwia/index.html
+++ b/oliwia/index.html
@@ -208,7 +208,7 @@ text-align: center;
 	<footer class="c-footer">
         
             <ul class="c-footer__list1">
-                <li class="c-footer__item"><a href="https://malgos208.github.io/projects/julka/index.html" target="blank">GitHub Pages</a></li>
+                <li class="c-footer__item"><a href="https://malgos208.github.io/projects/oliwia/index.html" target="blank">GitHub Pages</a></li>
             </ul>
        
 
